--- a/client/src/app/core/ui/index/index.component.html
+++ b/client/src/app/core/ui/index/index.component.html
@@ -13,17 +13,25 @@
         <hr class="my-4" />
         <p class="text-base text-gray-100 m-2">Last Update: {{ manga.last_update }}</p>
         <p class="text-base text-gray-100 m-2">Status: {{ manga.finished ? 'Finished' : 'Ongoing' }}</p>
-        <p *ngIf="latestChap$ | async as latestChap" class="text-base text-gray-100 m-2">Last Read Chapter: {{
+        <p data-bs-toggle="modal" data-bs-target="#exampleModalLong" *ngIf="latestChap$ | async as latestChap"
+          class="text-base text-gray-100 m-2 cursor-pointer" (click)="onLatestChapterClick(latestChap.id)">Last Read
+          Chapter: {{
           latestChap.title }}</p>
+        <div>
+          <svg (click)="onReverseClick()" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-gray-100 cursor-pointer" fill="none" viewBox="0 0 24 24" stroke="currentColor"
+            stroke-width="2">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M7 16V4m0 0L3 8m4-4l4 4m6 0v12m0 0l4-4m-4 4l-4-4" />
+          </svg>
+        </div>
       </div>
     </div>
   </div>
 
   <app-tabs [tabNames]="tabNames" [maxWidth]="65" (tabActivateEvent)="onTabLinkClicked($event)"></app-tabs>
   <div class="m-auto max-w-[65%] bg-white">
-    <div class="index-table grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
-      <div class="text-center m-3 p-3 hover:bg-gray-100 rounded-lg" (click)="onChapterClick(idx)"
-        data-bs-toggle="modal" data-bs-target="#exampleModalLong"
+    <div class="index-table grid grid-cols-2 sm:grid-cols-2 lg:grid-cols-3">
+      <div class="text-center m-3 p-3 hover:bg-gray-100 rounded-lg" (click)="onChapterClick(idx)" data-bs-toggle="modal"
+        data-bs-target="#exampleModalLong"
         *ngFor="let chapter of manga.chapters[tabNames[activatedTab]]; let idx = index">
         <a class="p-3">{{
           chapter.title }}</a>
@@ -33,12 +41,13 @@
 </div>
 
 <div class="modal fade fixed top-0 left-0 hidden w-full h-full outline-none overflow-x-hidden overflow-y-auto"
-  id="exampleModalLong" tabindex="-1" aria-labelledby="exampleModalLongLabel" aria-hidden="true" (keydown.arrowleft)="onLeftDown()" (keydown.arrowright)="onRightDown()">
+  id="exampleModalLong" tabindex="-1" aria-labelledby="exampleModalLongLabel" aria-hidden="true"
+  (keydown.arrowleft)="onLeftDown()" (keydown.arrowright)="onRightDown()">
   <div class="modal-dialog relative w-auto max-w-fit pointer-events-none">
     <div
       class="modal-content border-none shadow-lg relative flex flex-col w-full pointer-events-auto bg-white bg-clip-padding rounded-md outline-none text-current">
       <div class="modal-body">
-        <app-view-panel></app-view-panel>
+        <app-view-panel (clickLeft)="onLeftDown()" (clickRight)="onRightDown()"></app-view-panel>
       </div>
     </div>
   </div>
