--- a/client/src/app/core/ui/view-panel/view-panel.component.html
+++ b/client/src/app/core/ui/view-panel/view-panel.component.html
@@ -1,3 +1,14 @@
-<div *ngFor="let page of pages">
-  <img class="m-auto" [src]="page" />
+<button type="button" data-bs-toggle="modal" data-bs-target="#exampleModalLong"
+  class="lg:invisible fixed top-4, right-4 bg-white rounded-md p-2 inline-flex items-center justify-center text-gray-400 hover:text-gray-500 hover:bg-gray-100">
+  <span class="sr-only">Close menu</span>
+  <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"
+    aria-hidden="true">
+    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
+  </svg>
+</button>
+<div id="image-container" (dblclick)="onImageContainerClick($event)">
+  <div *ngFor="let page of pages">
+    <img class="m-auto" [src]="page" />
+  </div>
 </div>
+
